# bakery_management

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  package-lock.json  pyproject.toml  requirements.txt  roadmap.md  tailwind.config.js
.github/workflows/: deploy.yml
manolibakes/: manage.py  try-script.js  try.html  try_style.css
manolibakes/core/: admin.py  dto.py  fields.py  forms.py  models.py  urls.py  utils.py  views.py
manolibakes/core/management/commands/: compute_orders.py  insert_breads.py  insert_breads_from_sqlite.py  insert_customers.py  insert_customers_from_sqlite.py  insert_from_sqlite.py  insert_orders.py  insert_weekly_defaults.py  sample_ingest.py  seed_db.py
manolibakes/core/migrations/: 0001_initial.py  0002_alter_weeklydefaults_weekday.py  0003_alter_weeklydefaults_weekday.py  0004_alter_weeklydefaults_weekday.py  0005_order_unique_order.py  0006_alter_order_number.py  0007_alter_customer_lastname.py  0008_customer_unique_name_lastname.py  0009_dailydefaults_dailydefaults_unique_daily_default.py  0010_alter_customer_name.py  0011_alter_customer_name.py  0012_alter_bread_options_alter_customer_lastname.py  0013_remove_weeklydefaults.py  0014_bread_image.py  0015_alter_bread_name.py
manolibakes/core/services/: customer.py  orders.py
manolibakes/core/static/core/: date_picker.js  output.css  script.js  style.css
manolibakes/core/templates/core/: _base.html  _bread_thumb.html  bread.html  breads.html  create_bread.html  create_customer.html  customer.html  customer_daily_defaults.html  (+4 more)
manolibakes/manolibakes/: asgi.py  settings.py  urls.py  wsgi.py
manolibakes/members/: forms.py  urls.py  views.py
(+2 files in other folders)
