[project]
name = "manoli-bakes"
version = "0.1.0"
description = "A django app to manage a bakery"
authors = [
    {name = "Javier Linares", email = "jlinarestorres2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.0.4",
    "pydantic>=2.7.1",
    "psycopg>=3.1.18",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "django-stubs>=5.0",
    "ruff>=0.15.12",
]
