[project]
name = "manoli-bakes"
version = "0.1.0"
description = "A django app to manage a bakery"
authors = [
    {name = "Javier Linares", email = "jlinarestorres2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "pydantic>=2.7.1",
    "Pillow>=11.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "django-stubs>=5.0",
    "poethepoet>=0.30",
    "ruff>=0.15.12",
]

[tool.poe.tasks]
runserver = "uv run --env-file .env python manolibakes/manage.py runserver"
makemigrations = "uv run --env-file .env python manolibakes/manage.py makemigrations"
migrate = "uv run --env-file .env python manolibakes/manage.py migrate"
seed_db = "uv run --env-file .env python manolibakes/manage.py seed_db"
